src/components/Popup/Popup.scss
.popup {
  background-color: $color-white;
  padding: 24px;
  position: relative;
  width: 100%;
  color: $color-blue;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  .textfield__label {
    color: $color-blue;
  }

  &__header {
    color: $color-blue;
    display: flex;
    align-items: center;
    justify-content: left;
    font-weight: 700;
    font-size: 18px;
    line-height: 26px;
    width: 100%;

    svg {
      position: absolute;
      right: 24px;
      top: 28px;
      cursor: pointer;
      transition: all $main-transition-duration;

      &:hover {
        opacity: .7;
      }
    }
  }

  &__wrap {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    min-width: 375px;
    max-width: 375px;
    max-height: 600px;
    background: #0c0a3eb7;
    display: flex;
    z-index: 100;
    overflow: auto;
    transition: all $main-transition-duration;
    pointer-events: none;
    opacity: 0;
    padding: 16px;
    align-items: center;
    justify-content: center;
    user-select: none;

    &.is-visible {
      pointer-events: all;
      opacity: 1;
      user-select:inherit;
    }
  }
}

